added widget areas to footer

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -524,24 +524,30 @@ button {
   top: 0;
 }
 
-/* line 167, ../scss/_navbar.scss */
-.footer-widget .container {
-  background-color: #222;
+/* line 168, ../scss/_navbar.scss */
+.footer-widgets .nav {
+  margin-top: 0px;
+}
+/* line 172, ../scss/_navbar.scss */
+.footer-widgets .widget {
+  border-left: 1px solid #222;
+  padding: 10px;
+  margin-top: 30px;
 }
 
-/* line 172, ../scss/_navbar.scss */
+/* line 181, ../scss/_navbar.scss */
 #footer-menu li {
   width: 100%;
 }
 
 @media only all and (max-width: 767px) {
   /* Logo */
-  /* line 181, ../scss/_navbar.scss */
+  /* line 190, ../scss/_navbar.scss */
   .navbar-brand {
     padding-left: 15px;
   }
 
-  /* line 184, ../scss/_navbar.scss */
+  /* line 193, ../scss/_navbar.scss */
   .navbar-collapse {
     background-color: #000;
   }
@@ -1470,7 +1476,7 @@ a:hover {
  */
 /* line 437, ../scss/custom.scss */
 #root-footer, #footer {
-  height: 300px;
+  height: auto;
 }
 /* line 439, ../scss/custom.scss */
 #root-footer p, #footer p {
@@ -1480,39 +1486,12 @@ a:hover {
 /* line 443, ../scss/custom.scss */
 #footer {
   background-color: #000;
-  height: 300px;
-  z-index: -1;
-}
-
-/* line 10, ../../../../../../../../../Users/judah/.rvm/gems/ruby-2.0.0-p247@global/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/layout/_sticky-footer.scss */
-html, body {
-  height: 100%;
-}
-
-/* line 12, ../../../../../../../../../Users/judah/.rvm/gems/ruby-2.0.0-p247@global/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/layout/_sticky-footer.scss */
-#root {
-  clear: both;
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  margin-bottom: -300px;
-}
-/* line 18, ../../../../../../../../../Users/judah/.rvm/gems/ruby-2.0.0-p247@global/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/layout/_sticky-footer.scss */
-#root #root-footer {
-  height: 300px;
-}
-
-/* line 20, ../../../../../../../../../Users/judah/.rvm/gems/ruby-2.0.0-p247@global/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/layout/_sticky-footer.scss */
-#footer {
-  clear: both;
-  position: relative;
-  height: 300px;
 }
 
 /*
  *  Admin Menu 
  */
-/* line 455, ../scss/custom.scss */
+/* line 453, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
