--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -174,6 +174,9 @@ button {
         border-left: 1px solid #222;
         padding: 10px;
         margin-top: 30px;
+        h3 {
+            font-family: "Dosis", sans-serif !important;
+        }
     }
 }
 
