h1 a is now a light gray

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -248,7 +248,7 @@ h1 {
 }
 /* line 56, ../scss/_typography.scss */
 h1 a {
-  color: #0074a2;
+  color: #aaa;
 }
 /* line 58, ../scss/_typography.scss */
 h1 a:hover {
