--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -54,7 +54,7 @@ h1 {
         font-size: 42px;
     }
     a{
-        color: $blue;
+        color: #aaa;
         &:hover {
             color: white;
         }
