adjusted mail chimp settings

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -431,8 +431,8 @@ a:hover {
 }
 
 .mergeRow {
-    display: none;
-    padding: 0;
+    display: none !important;
+    padding: 0 !important;
 }
 
 
