--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1500,8 +1500,8 @@ a:hover {
 
 /* line 433, ../scss/custom.scss */
 .mergeRow {
-  display: none;
-  padding: 0;
+  display: none !important;
+  padding: 0 !important;
 }
 
 /* 
