--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -430,7 +430,7 @@ a:hover {
     border: 1px solid black;
 }
 
-#mc_signup_form {
+#mc_signup {
     padding: 0 !important;
     .mergeRow {
         display: none !important;
