--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -439,11 +439,13 @@ a:hover {
 }
 #mc_signup_submit {
     margin-top: 0;
-    width: 100%;
+    width: 100% !important;
     background: $red;
     padding: 10px;
+    margin-top: 0;
     border: 0;
     color: white;
+    @include border-radius(10px);
     @include transition(background-color, 0.25s);
     &:hover {
         background-color: $blue;
