updated mailchimp submit button

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1514,14 +1514,14 @@ a:hover {
   width: 100% !important;
   background: #d2322d;
   padding: 10px;
-  margin-top: 0;
+  margin-top: 0 !important;
   border: 0;
   color: white;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
-  border-radius: 10px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
   -webkit-transition: background-color, 0.25s;
   -moz-transition: background-color, 0.25s;
   -o-transition: background-color, 0.25s;
