--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -206,6 +206,46 @@ button {
         width: 100%;
     }
 }
+#root-footer, #footer {
+    height: auto;
+    p {
+        color: #666;
+    }
+}
+#footer {
+    background-color: #000;
+}
+// @include sticky-footer(300px, "#root", "#root-footer", "#footer");
+
+
+
+
+/*  
+ *  Mailchimp Email Signup 
+ */
+
+#mc_signup {
+    padding: 0 !important;
+    .mergeRow {
+        display: none !important;
+        padding: 0 !important;
+    }    
+}
+#mc_signup_submit {
+    margin-top: 0;
+    width: 100% !important;
+    background: $red;
+    padding: 10px;
+    margin-top: 0 !important;
+    border: 0;
+    color: white;
+    @include border-radius(2px);
+    @include transition(background-color, 0.25s);
+    &:hover {
+        background-color: $blue;
+        @include transition(background-color, 0.25s);
+    }
+}
 
 //  Responsive: Portrait mobile and below
 
