--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -230,6 +230,9 @@ button {
         display: none !important;
         padding: 0 !important;
     }    
+    form {
+        padding: 0 !important;
+    }
 }
 #mc_signup_submit {
     margin-top: 0;
