--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -220,6 +220,18 @@ button {
 
 
 
+/* 
+ *  Kebo Tweets
+ */
+
+ .kebo-tweets {
+    .kaccount, .kdate {
+        font-size: 96% !important;
+    }
+ }
+
+
+
 /*  
  *  Mailchimp Email Signup 
  */
