--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -225,7 +225,7 @@ button {
  */
 
  .kebo-tweets {
-    .kaccount, .kdate {
+    a.kaccount, a.kdate {
         font-size: 96% !important;
     }
  }
