removed border-left from first widget

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -182,6 +182,9 @@ button {
             letter-spacing: 3px;
         }
     }
+    .widget:first-child {
+        border-left: 0;
+    }
     .menu-item {
         margin: 10px 0;
         text-transform: uppercase;
