--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -543,6 +543,10 @@ button {
   letter-spacing: 3px;
 }
 /* line 185, ../scss/_navbar.scss */
+.footer-widgets .widget:first-child {
+  border-left: 0;
+}
+/* line 188, ../scss/_navbar.scss */
 .footer-widgets .menu-item {
   margin: 10px 0;
   text-transform: uppercase;
@@ -553,7 +557,7 @@ button {
       }
   } */
 }
-/* line 189, ../scss/_navbar.scss */
+/* line 192, ../scss/_navbar.scss */
 .footer-widgets .menu-item:before {
   margin-left: 10px;
   margin-right: 5px;
@@ -561,21 +565,21 @@ button {
   color: #d2322d;
 }
 
-/* line 205, ../scss/_navbar.scss */
+/* line 208, ../scss/_navbar.scss */
 #footer-menu li {
   width: 100%;
 }
 
-/* line 209, ../scss/_navbar.scss */
+/* line 212, ../scss/_navbar.scss */
 #root-footer, #footer {
   height: auto;
 }
-/* line 211, ../scss/_navbar.scss */
+/* line 214, ../scss/_navbar.scss */
 #root-footer p, #footer p {
   color: #666;
 }
 
-/* line 215, ../scss/_navbar.scss */
+/* line 218, ../scss/_navbar.scss */
 #footer {
   background-color: #000;
 }
@@ -583,7 +587,7 @@ button {
 /* 
  *  Kebo Tweets
  */
-/* line 228, ../scss/_navbar.scss */
+/* line 231, ../scss/_navbar.scss */
 .kebo-tweets a.kaccount, .kebo-tweets a.kdate {
   font-size: 96% !important;
 }
@@ -591,21 +595,21 @@ button {
 /*  
  *  Mailchimp Email Signup 
  */
-/* line 239, ../scss/_navbar.scss */
+/* line 242, ../scss/_navbar.scss */
 #mc_signup {
   padding: 0 !important;
 }
-/* line 241, ../scss/_navbar.scss */
+/* line 244, ../scss/_navbar.scss */
 #mc_signup .mergeRow {
   display: none !important;
   padding: 0 !important;
 }
-/* line 245, ../scss/_navbar.scss */
+/* line 248, ../scss/_navbar.scss */
 #mc_signup form {
   padding: 0 !important;
 }
 
-/* line 249, ../scss/_navbar.scss */
+/* line 252, ../scss/_navbar.scss */
 #mc_signup_submit {
   margin-top: 0;
   width: 100% !important;
@@ -624,7 +628,7 @@ button {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 259, ../scss/_navbar.scss */
+/* line 262, ../scss/_navbar.scss */
 #mc_signup_submit:hover {
   background-color: #0074a2;
   -webkit-transition: background-color, 0.25s;
@@ -633,12 +637,12 @@ button {
   transition: background-color, 0.25s;
 }
 
-/* line 264, ../scss/_navbar.scss */
+/* line 267, ../scss/_navbar.scss */
 .mc_success_msg {
   color: #0074a2;
 }
 
-/* line 267, ../scss/_navbar.scss */
+/* line 270, ../scss/_navbar.scss */
 #mc_message {
   margin-bottom: 15px;
   margin-top: -2px;
@@ -646,12 +650,12 @@ button {
 
 @media only all and (max-width: 767px) {
   /* Logo */
-  /* line 276, ../scss/_navbar.scss */
+  /* line 279, ../scss/_navbar.scss */
   .navbar-brand {
     padding-left: 15px;
   }
 
-  /* line 279, ../scss/_navbar.scss */
+  /* line 282, ../scss/_navbar.scss */
   .navbar-collapse {
     background-color: #000;
   }
