--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -530,7 +530,7 @@ button {
 }
 /* line 172, ../scss/_navbar.scss */
 .footer-widgets .widget {
-  border-left: 1px solid #222;
+  border-left: 1px dashed #222;
   padding: 27px;
   margin-top: 30px;
 }
