--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -171,7 +171,7 @@ button {
     }
     .widget {
         // background-color: #222;
-        border-left: 1px solid #222;
+        border-left: 1px dashed #222;
         padding: 27px;
         margin-top: 30px;
         h2 {
